@@ -530,3 +530,10 @@
 [2023-02-16]
 - Updated the respawn time of Amani Vase.
 - Updated the respawn time of Eagle Figurine.
+
+[2023-02-18]
+- Updated the smart script for Ironhide to give every member of a group credit for the quest The Conquest Pit: Bear Wrestling!
+- Updated the smart script for Torgg Thundertotem to give every member of a group credit for the quest The Conquest Pit: Mad Furbolg Fighting.
+- Updated the smart script for Rustblood to give every member of a group credit for the quest The Conquest Pit: Blood and Metal.
+- Updated the smart script for Horgrenn Hellcleave to give every member of a group credit for the quest The Conquest Pit: Death Is Likely.
+- Updated the smart script for Conqueror Krenna to give every member of a group credit for the quest The Conquest Pit: Final Showdown.
